################################################################################
# Set minimum required version of cmake, project name and compile options
################################################################################
cmake_minimum_required(VERSION 3.5)
project(manipulator_h_description)
find_package(ament_cmake REQUIRED)

################################################################################
# Find catkin packages and libraries for catkin and system dependencies
################################################################################

################################################################################
# Setup for python modules and scripts
################################################################################

################################################################################
# Declare ROS messages, services and actions
################################################################################

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Declare catkin specific configuration to be passed to dependent projects
################################################################################

ament_package()

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################
install(DIRECTORY doc launch meshes urdf controllers
  DESTINATION share/${PROJECT_NAME}
)

################################################################################
# Test
################################################################################
